2014-01-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (link_command):  Enforce a consistent linkage state;
	we must either have both a forward and a reverse ("via" and "inverse")
	function or neither.
	Bug #1318

	* src/plot3d.c (plot3drequest) src/graph3d.c ([x|y]tick_callback):
	Support x2 and y2 axis labels in 3D plots ('set view map' mode only).
	In order for this to work, the secondary axis must be linked to the
	primary axis first ("set link").

2014-01-11  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile:  Automatically update version numbers for
	installer.

	* src/win/wgraph.c (drawgraph):  When drawing to the screen, point
	symbols are drawn to a memory bitmap first, which is then copied to
	the target device. That way subsequent draws of the same point symbol
	just need to copy the bitmap. This speeds up drawing of graphs with
	a large number of point symbols.

	* src/win/wgdiplus.cpp (drawgraph_gdiplus):  The GDI+ backend uses
	the same technique, but was missing a case when to invalidate the
	cached bitmap.

	* src/win/wgnuplib.h src/win/wgdiplus.cpp src/win/wgraph.c:  Using
	MinGW 4.8.1, FontFamily::GenericSansSerif() results in unresolved
	externals during linking. This is a bug in MinGW's runtime.

	* src/win/winmain.c:  Current version of MinGW does not offer working
	version of __argc/__argv, but _argv/_argv. A web search shows that
	MinGW-w64 is different. This is a bug in MinGW's runtime.

	* win/gnuplot.iss (MinVersion):  Minimum required version of the
	installer is XP.

2014-01-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c:  Fix iteration over parametric function plots.
	Bug #1314

	* src/datafile.c (df_generate_pseudodata):  Allow use of '++' pseudofile
	to sample the parametric variables U and V in 3D parametric mode.

2014-01-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/datafile.h src/plot2d.c:  Only include support for